--- a/views/center/monthlyProgress/monthlyProgress.ejs
+++ b/views/center/monthlyProgress/monthlyProgress.ejs
@@ -33,9 +33,11 @@
         <!-- <a href="/center/generatePdfMonthlyProgress" class="btn btn-primary"
                   >Download pdf</a
                 > -->
-        <button onclick="exportToExcel('tblexportData', 'মাসিক প্রতিবেদন')" class="btn btn-success">
-          Export Table Data To Excel File
-        </button>
+        <button onclick="exportToExcel('tblCustomers', 'মাসিক প্রতিবেদন')" class="btn btn-success">Export Table Data To Excel File</button>
+
+                <!-- <button onclick="exportToPdf()" class="btn btn-success">
+                    Download PDF
+                </button> -->
 
         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
@@ -47,33 +49,40 @@
 <%- include('../../includes/footer')-%>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-<script>
-  function exportToExcel(tableID, filename = "") {
-    var downloadurl;
-    var dataFileType = "application/vnd.ms-excel";
-    var tableSelect = document.getElementById(tableID);
-    // var tableSelect = document.getElementsByClassName(tableID);
-    var tableHTMLData = tableSelect.outerHTML.replace(/ /g, "%20");
-    // Specify file name
-    filename = filename ? filename + ".xls" : "export_excel_data.xls";
-    // Create download link element
-    downloadurl = document.createElement("a");
-    document.body.appendChild(downloadurl);
-    if (navigator.msSaveOrOpenBlob) {
-      var blob = new Blob(["\ufeff", tableHTMLData], {
-        type: dataFileType,
-      });
-      navigator.msSaveOrOpenBlob(blob, filename);
-    } else {
-      // Create a link to the file
-      downloadurl.href = "data:" + dataFileType + ", " + tableHTMLData;
-      // Setting the file name
-      downloadurl.download = filename;
-      //triggering the function
-      downloadurl.click();
-    }
+<script type="text/javascript">
+  function exportToExcel(tableID, filename = ''){
+      console.log("clicked");
+      var downloadurl;
+      var dataFileType = 'application/vnd.ms-excel';
+      var tableSelect = document.getElementById(tableID);
+      var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
+      
+      // Specify file name
+      filename = filename?filename+'.xls':'export_excel_data.xls';
+      
+      // Create download link element
+      downloadurl = document.createElement("a");
+      
+      document.body.appendChild(downloadurl);
+      
+      if(navigator.msSaveOrOpenBlob){
+          var blob = new Blob(['\ufeff', tableHTMLData], {
+              type: dataFileType
+          });
+          navigator.msSaveOrOpenBlob( blob, filename);
+      }else{
+          // Create a link to the file
+          downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
+      
+          // Setting the file name
+          downloadurl.download = filename;
+          
+          //triggering the function
+          downloadurl.click();
+      }
   }
-</script>
+   
+  </script>
 <script>
   $(document).ready(function() {
     $(".dropdown a.test").on("click", function(e) {
@@ -147,6 +156,11 @@
     },
   });
   $(document).ready(function() {
-    $("#tblCustomers").DataTable();
+    $("#tblCustomers").DataTable({
+      dom: 'Bfrtip',
+      buttons: [
+          'excelHtml5',
+        ]
+    });
   });
 </script>
