--- a/views/pd/employee/chak1/employeeChak1TableAll.ejs
+++ b/views/pd/employee/chak1/employeeChak1TableAll.ejs
@@ -9,7 +9,7 @@
           text-align: left;    
         }
         </style>
-    <table class="table table-bordered table-striped" >
+    <table class="table table-bordered table-striped" id="tblexportData" >
     <thead>
     <tr>
         <th>ক্রমিক নং</th>
