--- a/views/pd/worker/workerInfo/workerInfo.ejs
+++ b/views/pd/worker/workerInfo/workerInfo.ejs
@@ -74,7 +74,7 @@
         <button onclick="exportToPdf()" class="btn btn-success">
           Download PDF
         </button>
-        <button onclick="exportToExcel('tblexportData', 'worker-info')" class="btn btn-success">Export Table Data To Excel File</button>
+        <button onclick="exportToExcel('tblCustomers', 'worker-info')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
         <div id="output"></div>
