monthlyProgress table fixed

--- a/views/center/monthlyProgress/monthlyProgressTable.ejs
+++ b/views/center/monthlyProgress/monthlyProgressTable.ejs
@@ -29,137 +29,137 @@
     <% records.forEach(function(row){ %>
 
     <%
-                const currentMonth = selectedDate
-                var startRange = "";
-                var endRange = "";
+    const currentMonth = moment().format("MMM-YYYY").toLowerCase();
+    var startRange = "";
+    var endRange = "";
 
-                var prevEconomicStart = "";
-                var prevEconomicEnd = "";
+    var prevEconomicStart = "";
+    var prevEconomicEnd = "";
 
-                if (moment().format("M") < 7){
-                    startRange = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
-                    endRange = "jul"+"-"+moment().format('yyyy')
-                }else{
-                    startRange = "jul"+"-"+moment().format('yyyy')
-                    endRange = "jul"+"-"+moment().add(1, "year").format('yyyy')
-                }
+    if (moment().format("M") < 7){
+        startRange = "jul"+"-"+moment(selectedDate).subtract(1, "year").format('yyyy')
+        endRange = "jul"+"-"+moment(selectedDate).format('yyyy')
+    }else{
+        startRange = "jul"+"-"+moment(selectedDate).format('yyyy')
+        endRange = "jul"+"-"+moment(selectedDate).add(1, "year").format('yyyy')
+    }
 
 
-                // Previous Economic year
+    // Previous Economic year
 
-                if (moment().format("M") < 7){
-                    prevEconomicStart = "jul"+"-"+moment().subtract(2, "year").format('yyyy')
-                    prevEconomicEnd = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
-                }else{
-                    prevEconomicStart = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
-                    prevEconomicEnd = "jul"+"-"+moment().format('yyyy')
-                  }
+    if (moment().format("M") < 7){
+        prevEconomicStart = "jul"+"-"+moment(selectedDate).subtract(2, "year").format('yyyy')
+        prevEconomicEnd = "jul"+"-"+moment(selectedDate).subtract(1, "year").format('yyyy')
+    }else{
+        prevEconomicStart = "jul"+"-"+moment(selectedDate).subtract(1, "year").format('yyyy')
+        prevEconomicEnd = "jul"+"-"+moment(selectedDate).format('yyyy')
+    }
 
-                // current production (  উৎপাদন  )*******
-                var currentProductionSum = 0;
-                var previousMonthProduction = 0;
-                const currentProd = JSON.parse(row.productionCurrent)
-                currentProd.forEach(function(prodCurrent){
-                    if ( prodCurrent.time === selectedDate ) {
-                        currentProductionSum += parseInt(prodCurrent.amount)
-                    }
-                    else if ( moment( prodCurrent.time ).isBefore(selectedDate) && moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
-                        previousMonthProduction += parseInt(prodCurrent.amount)
-                    }
-                })
+    // current production (  উৎপাদন  )*******
+    var currentProductionSum = 0;
+    var previousMonthProduction = 0;
+    const currentProd = JSON.parse(row.productionCurrent)
+    currentProd.forEach(function(prodCurrent){
+        if ( prodCurrent.time === selectedDate ) {
+            currentProductionSum += parseInt(prodCurrent.amount)
+        }
+        else if ( moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
+            previousMonthProduction += parseInt(prodCurrent.amount)
+        }
+    })
 
-                // উৎপাদন (লক্ষ্যমাত্রা) *********
-                var productionTargetSum = 0;
-                const TargetProduction = JSON.parse(row.productionTarget)
-                TargetProduction.forEach(function(prodTarget){
-                    if ( moment(currentMonth).isAfter(prodTarget.startTime) &&  moment(currentMonth).isBefore(prodTarget.endTime) ){
-                        productionTargetSum += parseInt(prodTarget.amount)
-                    }
-                })
+    // উৎপাদন (লক্ষ্যমাত্রা) *********
+    var productionTargetSum = 0;
+    const TargetProduction = JSON.parse(row.productionTarget)
+    TargetProduction.forEach(function(prodTarget){
+        if ( moment(selectedDate).isAfter(prodTarget.startTime) &&  moment(selectedDate).isBefore(prodTarget.endTime) ){
+            productionTargetSum += parseInt(prodTarget.amount)
+        }
+    })
 
-                // মোট উৎপাদন (চলতি+পূর্ব মাস) *********
-                var totalProductionSum = 0;
-                const TotalProduction = JSON.parse(row.productionTotal)
-                TotalProduction.forEach(function(prodTotal){
-                    if ( moment(currentMonth).isAfter(prodTotal.startTime) &&  moment(currentMonth).isBefore(prodTotal.endTime) ){
-                        totalProductionSum += parseInt(prodTotal.amount)
-                    }
-                })
+    // মোট উৎপাদন (চলতি+পূর্ব মাস) *********
+    var totalProductionSum = 0;
+    const TotalProduction = JSON.parse(row.productionTotal)
+    TotalProduction.forEach(function(prodTotal){
+        if ( moment(selectedDate).isAfter(prodTotal.startTime) &&  moment(selectedDate).isBefore(prodTotal.endTime) ){
+            totalProductionSum += parseInt(prodTotal.amount)
+        }
+    })
 
-                //ডিএই চালানে প্রাপ্তি (চলতি মাস) *********
-                var daePraptiSum = 0;
-                const currentDaePrapti = JSON.parse(row.daePrapti)
-                currentDaePrapti.forEach(function(daePraptiCurrent){
-                    if ( daePraptiCurrent.time === selectedDate ) {
-                        daePraptiSum += parseInt(daePraptiCurrent.amount)
-                    }
-                })
+    //ডিএই চালানে প্রাপ্তি (চলতি মাস) *********
+    var daePraptiSum = 0;
+    const currentDaePrapti = JSON.parse(row.daePrapti)
+    currentDaePrapti.forEach(function(daePraptiCurrent){
+        if ( daePraptiCurrent.time === selectedDate ) {
+            daePraptiSum += parseInt(daePraptiCurrent.amount)
+        }
+    })
 
-                // পূর্ব বছরের জের *********
-                var prevYearJer = 0;
-                currentDaePrapti.forEach(function(daePraptiCurrent){
-                    if ( moment( daePraptiCurrent.time ).isAfter(prevEconomicStart) &&  moment( daePraptiCurrent.time ).isBefore(prevEconomicEnd) ) {
-                        prevYearJer += parseInt(daePraptiCurrent.amount)
-                    }
-                })
+    // পূর্ব বছরের জের *********
+    var prevYearJer = 0;
+    currentDaePrapti.forEach(function(daePraptiCurrent){
+        if ( moment( daePraptiCurrent.time ).isAfter(prevEconomicStart) &&  moment( daePraptiCurrent.time ).isBefore(prevEconomicEnd) ) {
+            prevYearJer += parseInt(daePraptiCurrent.amount)
+        }
+    })
 
-                //  বিতরণ ********
-                var currentBitoronSum = 0;
-                var previousMonthBitoronSum = 0;
-                const currBitoron = JSON.parse(row.bitoronCurrentMonth)
-                currBitoron.forEach(function(BitoCurrent){
-                    if ( BitoCurrent.time === selectedDate ) {
-                        currentBitoronSum += parseInt(BitoCurrent.amount)
-                    }
-                    else if ( moment( BitoCurrent.time ).isBefore(selectedDate) && moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
-                        previousMonthBitoronSum += parseInt(BitoCurrent.amount)
-                    }
-                })
+    //  বিতরণ ********
+    var currentBitoronSum = 0;
+    var previousMonthBitoronSum = 0;
+    const currBitoron = JSON.parse(row.bitoronCurrentMonth)
+    currBitoron.forEach(function(BitoCurrent){
+        if ( BitoCurrent.time === selectedDate ) {
+            currentBitoronSum += parseInt(BitoCurrent.amount)
+        }
+        else if ( moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
+            previousMonthBitoronSum += parseInt(BitoCurrent.amount)
+        }
+    })
 
-                // মোট বিতরণ ******
-                var totalBitoronSum = 0;
-                const TotalBitoron = JSON.parse(row.bitoronTotal)
-                TotalBitoron.forEach(function(bitorTotal){
-                    if ( moment(currentMonth).isAfter(bitorTotal.startTime) &&  moment(currentMonth).isBefore(bitorTotal.endTime) ){
-                        totalBitoronSum += parseInt(bitorTotal.amount)
-                    }
-                })
+    // মোট বিতরণ ******
+    var totalBitoronSum = 0;
+    const TotalBitoron = JSON.parse(row.bitoronTotal)
+    TotalBitoron.forEach(function(bitorTotal){
+        if ( moment(selectedDate).isAfter(bitorTotal.startTime) &&  moment(selectedDate).isBefore(bitorTotal.endTime) ){
+            totalBitoronSum += parseInt(bitorTotal.amount)
+        }
+    })
 
-                // ডিএই চালানে প্রদান *******
-                var currentDaeProdanSum = 0;
-                const currDaeProdan = JSON.parse(row.daeProdan)
-                currDaeProdan.forEach(function(DaeProdanCurrent){
-                    if ( DaeProdanCurrent.time === selectedDate ) {
-                        currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
-                    }
-                })
+    // ডিএই চালানে প্রদান *******
+    var currentDaeProdanSum = 0;
+    const currDaeProdan = JSON.parse(row.daeProdan)
+    currDaeProdan.forEach(function(DaeProdanCurrent){
+        if ( DaeProdanCurrent.time === selectedDate ) {
+            currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
+        }
+    })
 
-                // মৃত/বিনষ্ট ********
-                var currentMritoSum = 0;
-                const currMrito = JSON.parse(row.deadWriteup)
-                currMrito.forEach(function(MritoCurrent){
-                    if ( MritoCurrent.time === selectedDate ) {
-                        currentMritoSum += parseInt(MritoCurrent.amount)
-                    }
-                })
+    // মৃত/বিনষ্ট ********
+    var currentMritoSum = 0;
+    const currMrito = JSON.parse(row.deadWriteup)
+    currMrito.forEach(function(MritoCurrent){
+        if ( MritoCurrent.time === selectedDate ) {
+            currentMritoSum += parseInt(MritoCurrent.amount)
+        }
+    })
 
-                // মজুদ ******
-                // var currentMojudSum = 0;
-                // const currMojud = JSON.parse(row.mojud)
-                // currMojud.forEach(function(MojudCurrent){
-                //     if ( MojudCurrent.time === selectedDate ) {
-                //         currentMojudSum += parseInt(MojudCurrent.amount)
-                //     }
-                // })
+    // মজুদ ******
+    // var currentMojudSum = 0;
+    // const currMojud = JSON.parse(row.mojud)
+    // currMojud.forEach(function(MojudCurrent){
+    //     if ( MojudCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+    //         currentMojudSum += parseInt(MojudCurrent.amount)
+    //     }
+    // })
 
-                // মন্তব্য *********
-                var montobboSum = "";
-                const currMontobbo = JSON.parse(row.comment)
-                currMontobbo.forEach(function(MontobboCurrent){
-                    if ( MontobboCurrent.time === selectedDate ) {
-                        montobboSum = MontobboCurrent.msg
-                    }
-                })
+    // মন্তব্য *********
+    var montobboSum = "";
+    const currMontobbo = JSON.parse(row.comment)
+    currMontobbo.forEach(function(MontobboCurrent){
+        if ( MontobboCurrent.time === selectedDate ) {
+            montobboSum = MontobboCurrent.msg
+        }
+    })
 
             %>
 
