--- a/views/pd/centerInfo/center.ejs
+++ b/views/pd/centerInfo/center.ejs
@@ -79,7 +79,7 @@
                    <button onclick="exportToPdf()" class="btn btn-success">
                     Download PDF
                 </button>
-                <button onclick="exportToExcel('tblexportData', 'সেন্টারসমূহের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
+                <button onclick="exportToExcel('tblCustomers', 'সেন্টারসমূহের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
                 </div>
