--- a/views/pd/monthlyProgress/monthlyProgress.ejs
+++ b/views/pd/monthlyProgress/monthlyProgress.ejs
@@ -58,7 +58,7 @@
 
                         <div class="table-responsive" id="output"></div>
 
-                        <button onclick="exportToExcel('tblexportData', 'মাসিক প্রতিবেদন')" class="btn btn-success">Export Table Data To Excel File</button>
+                        <button onclick="exportToExcel('tblCustomers', 'মাসিক প্রতিবেদন')" class="btn btn-success">Export Table Data To Excel File</button>
 
                         <button onclick="exportToPdf()" class="btn btn-success">
                             Download PDF
