--- a/views/pd/worker/workerInfo/workerInfoTable.ejs
+++ b/views/pd/worker/workerInfo/workerInfoTable.ejs
@@ -57,3 +57,7 @@
   </tbody>
 </table>
 <% } %>
+<button onclick="exportToPdf()" class="btn btn-success">
+  Download PDF
+</button>
+<button onclick="exportToExcel('tblCustomers', 'worker-info')" class="btn btn-success">Export Table Data To Excel File</button>
