--- a/views/center/specialCoconut/specialCoconutForm.ejs
+++ b/views/center/specialCoconut/specialCoconutForm.ejs
@@ -31,12 +31,23 @@
                             </button>
                         </div>
                     <% } %>
+                                    <% if(records.length > 0) %>
+                                    <% records.forEach(function(row){ %>
                                     <div class="form-group">
                                         <label for="center" class="col-md-3 control-label">সেন্টারের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" placeholder="সেন্টারের নাম">
+                                            <input type="text" class="form-control" name="center" value="<%= row.center %>">
                                         </div>
                                     </div>
+                                    <% })} else { %>
+                                        <div class="form-group">
+                                            <label for="center" class="col-md-3 control-label">সেন্টারের নাম</label>
+                                            <div class="col-md-9">
+                                                <input type="text" class="form-control" name="center" placeholder="সেন্টারের নাম">
+                                            </div>
+                                        </div>
+
+                                    <% } %>
                                     
                                     <div class="form-group">
                                         <label for="boraddo" class="col-md-3 control-label">মোট বরাদ্দকৃত অর্থের পরিমাণ</label>
