--- a/views/center/revolvingFund/revolvingFundForm.ejs
+++ b/views/center/revolvingFund/revolvingFundForm.ejs
@@ -44,27 +44,41 @@
                                             <input type="text" class="form-control" name="presentOrtho" placeholder="অর্থ উত্তোলন (বর্তমান মাসে উত্তোলন)">
                                         </div>
                                     </div>
-
+                                    
                                     <div class="form-group">
                                         <label for="pastOrtho" class="col-md-3 control-label">অর্থ উত্তোলন (পূর্ববর্তী মাস পর্যন্ত উত্তোলন)</label>
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" name="pastOrtho" placeholder="অর্থ উত্তোলন (পূর্ববর্তী মাস পর্যন্ত উত্তোলন)">
                                         </div>
                                     </div>
-
+                                    <% if(records.length > 0){ %>
+                                        <% records.forEach(function(row){ %>
                                     <div class="form-group">
                                         <label for="totalOrtho" class="col-md-3 control-label">অর্থ উত্তোলন (এ পর্যন্ত মোট উত্তোলন)</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="totalOrtho" placeholder="অর্থ উত্তোলন (এ পর্যন্ত মোট উত্তোলন)">
+                                        <input type="text" class="form-control" name="totalOrtho" value="<%= row.totalOrtho %>">
                                         </div>
                                     </div>
-
                                     <div class="form-group">
                                         <label for="bank" class="col-md-3 control-label">ব্যাংকে স্থিতি</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="bank" placeholder="ব্যাংকে স্থিতি">
+                                            <input type="text" class="form-control" name="bank" value="<%= row.bank %>">
                                         </div>
                                     </div>
+                                    <% })} else{ %>
+                                        <div class="form-group">
+                                            <label for="totalOrtho" class="col-md-3 control-label">অর্থ উত্তোলন (এ পর্যন্ত মোট উত্তোলন)</label>
+                                            <div class="col-md-9">
+                                            <input type="text" class="form-control" name="totalOrtho" placeholder="অর্থ উত্তোলন (এ পর্যন্ত মোট উত্তোলন)">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="bank" class="col-md-3 control-label">ব্যাংকে স্থিতি</label>
+                                            <div class="col-md-9">
+                                                <input type="text" class="form-control" name="bank" placeholder="ব্যাংকে স্থিতি">
+                                            </div>
+                                        </div>
+                                    <% } %>
 
                                     <div class="form-group">
                                         <label for="soldPast" class="col-md-3 control-label">বিক্রিত অর্থ জমা (পূর্ববর্তী মাস পর্যন্ত জমা)</label>
@@ -79,14 +93,22 @@
                                             <input type="text" class="form-control" name="soldPresent" placeholder="বিক্রিত অর্থ জমা (বর্তমান মাসে জমা)">
                                         </div>
                                     </div>
-
+                                    <% if(records.length > 0){ %>
+                                        <% records.forEach(function(row){ %>
                                     <div class="form-group">
                                         <label for="soldTotal" class="col-md-3 control-label">বিক্রিত অর্থ জমা (মোট জমা)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="soldTotal" placeholder="বিক্রিত অর্থ জমা (মোট জমা)">
+                                            <input type="text" class="form-control" name="soldTotal" value="<%= row.soldTotal %>">
                                         </div>
                                     </div>
-
+                                    <% })} else{ %>
+                                        <div class="form-group">
+                                            <label for="soldTotal" class="col-md-3 control-label">বিক্রিত অর্থ জমা (মোট জমা)</label>
+                                            <div class="col-md-9">
+                                                <input type="text" class="form-control" name="soldTotal" placeholder="বিক্রিত অর্থ জমা (মোট জমা)">
+                                            </div>
+                                        </div>
+                                    <% } %>
                                     <div class="form-group">
                                         <label for="chara" class="col-md-3 control-label">চারা/কলমের নাম</label>
                                         <div class="col-md-9">
@@ -159,6 +181,24 @@
                                         <div class="col-md-9">
                                             <label for="year">বছর :</label>
                                         <select id="year" name="year" required>
+                                            <% const currentMonth = moment().format("MMM-YYYY").toLowerCase();
+                                            if (moment().format("M") < 7){
+                                                startYear = moment(currentMonth).subtract(1, "year").format('yyyy')
+                                                endYear = moment(currentMonth).format('yyyy')
+                                            }else{
+                                                startYear =moment(currentMonth).format('yyyy')
+                                                endYear = moment(currentMonth).add(1, "year").format('yyyy')
+                                            }
+                                            const sEndYear = endYear.toString().slice(2,4)
+                                            var valueStr = `${startYear}-${sEndYear}`
+                                            
+                                            const finalEnlishToBanglaNumber={'0':'০','1':'১','2':'২','3':'৩','4':'৪','5':'৫','6':'৬','7':'৭','8':'৮','9':'৯'};
+                                            for (const x in finalEnlishToBanglaNumber) {
+                                                valueStr = valueStr.replace(new RegExp(x, 'g'), finalEnlishToBanglaNumber[x]);
+                                            }    
+
+                                            %>
+                                            <option value="<%= startYear.toString() %>"><%= valueStr %></option>
                                             <option value="2017">২০১৭-১৮</option>
                                             <option value="2018">২০১৮-১৯</option>
                                             <option value="2019">২০১৯-২০</option>
