workerInfo table update fixed and birthDate added in table and form

--- a/views/center/worker/workerInfo/workerInfoEdit.ejs
+++ b/views/center/worker/workerInfo/workerInfoEdit.ejs
@@ -74,6 +74,13 @@
                                     </div>
 
                                     <div class="form-group">
+                                        <label for="birthDate" class="col-md-3 control-label">জন্ম তারিখ</label>
+                                        <div class="col-md-9">
+                                            <input type="date" class="form-control" name="birthDate" value="<%= records.birthDate %>">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
                                         <label for="bank" class="col-md-3 control-label">ব্যাংক একাউন্ট নং</label>
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" name="bank" value="<%= records.bank %>">
