--- a/views/center/worker/workerInfo/workerInfoForm.ejs
+++ b/views/center/worker/workerInfo/workerInfoForm.ejs
@@ -84,6 +84,13 @@
                                     </div>
 
                                     <div class="form-group">
+                                        <label for="birthDate" class="col-md-3 control-label">জন্ম তারিখ</label>
+                                        <div class="col-md-9">
+                                            <input type="date" class="form-control" name="birthDate" placeholder="জন্ম তারিখ">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
                                         <label for="bank" class="col-md-3 control-label">ব্যাংক একাউন্ট নং</label>
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" name="bank" placeholder="ব্যাংক একাউন্ট নং">
