--- a/views/center/worker/workerInfo/workerInfoTable.ejs
+++ b/views/center/worker/workerInfo/workerInfoTable.ejs
@@ -10,6 +10,7 @@
         <th>মোবাইল নং</th>
         <th>যোগদানের তারিখ</th>
         <th>এনআইডি নং</th>
+        <th>জন্ম তারিখ</th> 
         <th>ব্যাংক একাউন্ট নং</th>
         <th>পরিবর্তন/মুছুন</th>
 
@@ -26,6 +27,7 @@
                 <td><%= row.mobile %></td>
                 <td><%= row.date %></td>
                 <td><%= row.nid %></td>
+                <td><%= row.birthDate %></td>
                 <td><%= row.bank %></td>
                 <td><a class="btn btn-primary btn-xs" href="/center/workerInfoEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
                     <a class="btn btn-danger btn-xs" href="/center/workerInfoDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
@@ -46,6 +48,7 @@
         <th>মোবাইল নং</th>
         <th>যোগদানের তারিখ</th>
         <th>এনআইডি নং</th>
+        <th>জন্ম তারিখ</th>
         <th>ব্যাংক একাউন্ট নং</th>
         </tr>
         </thead>
