Chak2 form fixed

--- a/views/center/employee/chak2/employeeChak2Form.ejs
+++ b/views/center/employee/chak2/employeeChak2Form.ejs
@@ -37,7 +37,7 @@
                                                 <option value="">পদের নাম</option>
                                                 <% podobiLists.forEach(function(row){ %>
                                                     <% if (row.podobi != null) {%>
-                                                        <option value=<%= row.podobi %>><%= row.podobi %></option>
+                                                        <option value="<%= row.podobi %>"><%= row.podobi %></option>
                                                     <% } %>
                                                 <% }) %>
                                             </select>
