speicalCoconut slight fix

--- a/views/center/specialCoconut/specialCoconutForm.ejs
+++ b/views/center/specialCoconut/specialCoconutForm.ejs
@@ -31,8 +31,8 @@
                             </button>
                         </div>
                     <% } %>
-                                    <% if(records.length > 0) %>
-                                    <% records.forEach(function(row){ %>
+                                    <% if(records.length > 0){ %>
+                                        <% records.forEach(function(row){ %>
                                     <div class="form-group">
                                         <label for="center" class="col-md-3 control-label">সেন্টারের নাম</label>
                                         <div class="col-md-9">
