apaEdit feature enabled

--- a/views/center/apa/apaTable.ejs
+++ b/views/center/apa/apaTable.ejs
@@ -20,6 +20,7 @@
         <th>চতুর্থ ত্রৈমাসিক অর্জন</th>
         <th>মোট</th>
         <th>শতকরা হার</th>
+        <th>পরিবর্তন</th>
 
     </tr>
     </thead>
@@ -44,6 +45,8 @@
                 <td><%= new Number(row.fourthThree).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(row.total).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(row.percentage).toLocaleString("bn-BD") %></td>
+                <td><a class="btn btn-primary btn-xs" href="/center/apaEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                </td>
 
             </tr>
         <% }) %>
