changed kormokortar name to center head name

--- a/views/center/centerInfo/centerForm.ejs
+++ b/views/center/centerInfo/centerForm.ejs
@@ -32,9 +32,9 @@
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="kormokorta" class="col-md-3 control-label">কর্মকর্তার নাম</label>
+                                        <label for="kormokorta" class="col-md-3 control-label">কেন্দ্র প্রধানের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="kormokorta" placeholder="কর্মকর্তার নাম">
+                                            <input type="text" class="form-control" name="kormokorta" placeholder="কেন্দ্র প্রধানের নাম">
                                         </div>
                                     </div>
 
