--- a/views/pd/centerInfo/centerEdit.ejs
+++ b/views/pd/centerInfo/centerEdit.ejs
@@ -27,34 +27,34 @@
                                     <div class="form-group">
                                         <label for="center" class="col-md-3 control-label">সেন্টারের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" placeholder="" value="<%= records.center %>">
+                                            <input type="text" class="form-control" name="center" value="<%= records.center %>">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="serialNum" class="col-md-3 control-label">সেন্টারের সিরিয়াল নং</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="serialNum" placeholder="" value="<%= records.serialNum %>">
+                                            <input type="text" class="form-control" name="serialNum" value="<%= records.serialNum %>">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="kormokorta" class="col-md-3 control-label">কর্মকর্তার নাম</label>
+                                        <label for="kormokorta" class="col-md-3 control-label">কেন্দ্র প্রধানের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="kormokorta" placeholder="<%= records.kormokorta %>">
+                                            <input type="text" class="form-control" name="kormokorta" value="<%= records.kormokorta %>">
                                         </div>
                                     </div> 
 
                                     <div class="form-group">
                                         <label for="podobi" class="col-md-3 control-label">পদবী</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="podobi" placeholder="<%= records.podobi %>">
+                                            <input type="text" class="form-control" name="podobi" value="<%= records.podobi %>">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
                                         <label for="mobile" class="col-md-3 control-label">মোবাইল নং</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="mobile" placeholder="<%= records.mobile %>">
+                                            <input type="text" class="form-control" name="mobile" value="<%= records.mobile %>">
                                         </div>
                                     </div> 
 
